# seismic2midi

./: README.md  pyproject.toml  seismic2midi patch.als  seismic2midi_(public).ipynb  test.ipynb
seismic2midi/: base.py  get_event.py  get_midi.py  starter.py
