[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "seismic2midi"
version = "0.1.0"
description = "Convert seismic data to MIDI files"

[tool.poetry.dependencies]
python = "^3.9"
cartopy = "^0.20.0"
obspy = "^1.3.0"
pretty_midi = "^0.2.9"
libfmp = "^1.2.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"