[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "seismic2midi"
version = "0.1.0"
description = "Convert seismic data to MIDI files"

[tool.poetry.dependencies]
python = "^3.9"
music21 = "^9.9.1"
cartopy = "^0.24.1"
obspy = "^1.3.0"
pretty_midi = "^0.2.9"
pandas = "2.2.2"
pypianoroll = "1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
